[package]
name = "serde-wasm-bindgen"
version = "0.2.0"
authors = ["Ingvar Stepanyan <me@rreverser.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
repository = "https://github.com/cloudflare/serde-wasm-bindgen"
description = "Native Serde adapter for wasm-bindgen"
categories = ["development-tools::ffi", "wasm", "encoding"]
keywords = ["serde", "serialization", "javascript", "wasm", "webassembly"]

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive","alloc"] }
js-sys = "^0.3"
wasm-bindgen = "0.2.43"
lazy_static = "1.4.0"

[workspace]
members = ["benchmarks"]

[profile.release]
lto = true
codegen-units = 1

[features]
external_doc = []

[package.metadata.docs.rs]
features = ["external_doc"]
